Added TaskFlow schema and updated domain classes